# pc-set

./: LICENSE  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: publish.yml
scripts/: analyze_catalog.py
src/pc_set/: __init__.py  audio.py  catalog.py  common_sets.py  pcset.py  search.py
tests/: test_audio.py  test_catalog.py  test_common_sets.py  test_pcset.py
